# foodsnap-ml

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: auth.py  food_reference.py  health.py  meals.py  summary.py
app/core/: config.py  security.py
app/db/: session.py
app/db/models/: __init__.py  food_reference.py  meal_entry.py  meal_prediction.py  user.py
app/db/repositories/: __init__.py  (+3 more)
app/ml/: classifier.py  label_mapping.py
app/schemas/: auth.py  food_reference.py  meal.py  summary.py
app/services/: auth.py  calorie_estimator.py  food_data_client.py  food_reference_import.py  image_loader.py  meal_analysis.py  meal_ingestion.py  queue.py  state.py  storage.py  summary.py
app/utils/: datetime.py  ids.py
app/workers/: meal_analysis_worker.py
consumers/: __init__.py  rabbitmq.py
consumers/food_reference_import/: __init__.py  main.py
consumers/meal_analysis/: __init__.py  main.py
docker/: Dockerfile.food-reference-import-consumer  Dockerfile.meal-analysis-consumer
docs/: dev-workflow.md  food-data-sources.md  mvp-backlog.md  project-context.md  queue-contract.md  repo-structure.md
migrations/: env.py
migrations/versions/: 20260409_0001_create_initial_schema.py  fe32dd4a343e_describe_change.py
postman/: FoodSnap-ML.postman_collection.json
scripts/: run-api.sh  run-worker.sh
tests/: conftest.py
tests/api/: test_api.py
tests/consumer_services/: test_consumers.py
tests/services/: test_calorie_estimator.py  test_food_data_client.py  test_storage.py
