[project]
name = "foodsnap-ml"
version = "0.1.0"
description = "Food photo recognition MVP API with PostgreSQL persistence and RabbitMQ task publishing."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "aio-pika>=9.4.0,<10.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["app*", "consumers*"]
